assets/style.css
/* Global styles */

body {
    font-family: Roboto, Arial;
    min-height: 100vh;
    background-color: #fbfaf3;

    /* To push the footer down to the bottom of the page */
    display: flex;
    flex-direction: column;

/* keeps the hero body fully visible, otherwise the nav covers some of it */
padding-top: 47px;
}   

/* Navbar */
nav {
    padding: 0 !important;
    /* Keeps the nav constantly visible */
    position: fixed !important;
    top: 0;
    width: 100%;

    z-index: 10;
}

.navLogo {
    color: aliceblue;
    /* font-size: 35px; */
}
.bgNav {
    background-color: #0F1525;
} 
.ctaDiv {
    margin-left: auto;
    float: right;
    font-weight: 700;
    /* font-size: 27px; */
    background-color: #c23311 ;
    /* border-radius: 25px; */
    margin-top:7px;
    /* margin-bottom: 4px; */
    padding:0 5px 0 5px;
    /* height:47px; */
}

.cta {
    color: white !important;
}

/* Main styles */

/* Hero image */
#heroImg {
    width:100%;
    height: 75vh;
    object-fit: cover;
}
/* City image cards */

div .card {
    margin: 5px;
    padding: 0px;
}

/* City card images */

.cityImageButton {
    min-width: 100%;
    height: 190px;
}

.cityCardBody {
    padding: 5px 0 0 0;
}

/* Places to visit cards */

.placesToVisitCardImg {
     /* height: 100%; */
    /* max-width: 247px;   */
    object-fit: cover;
}

/* Partners sponsor cards */

.partnerSponsorCardImg {
    /* object-fit: cover; */
    max-height: 268px;
}

/* Google maps API dispayed map*/
#map {
    width: 100%;
    height: 400px;
}

/* Package deal cards */

.silverCard {
    background-color: #6D87F0  !important;
}
.goldCard {
    background-color: #4251D8  !important;
}
.platinumCard {
    background-color: #000084  !important;
}

.packageCardButton {
    position: absolute;
    bottom: 0;
    width: 120px;
    margin-top: 5px;
    margin-bottom: 10px;
    background-color: aliceblue;
    border-radius: 7px;
}

.packageCardButton:hover {
    background-color: rgb(173, 173, 173);
}

.packageCardButtonActive {
    background-color: #aad6bc;
}

.packageCard .card-body {
    min-height: 200px;
}

/* booking Choose city buttons */

.cityButton{
    width: 150px;
    margin-top: 5px;
    margin-bottom: 10px;
    background-color: aliceblue;
    border-radius: 7px;
}

.cityButton:hover {
    background-color: rgb(173, 173, 173);
}

.cityActive {
    background-color: #aad6bc;
}
/* Footer styles */

#footer {
    background-color: #212529;
    color: #FFFFFF;

        /* To push the footer down to the bottom of the page */
    margin-top: auto;
}

.footerCopyright {
    position: absolute;
    bottom: 0;
    margin: 0 !important;
}

#footer i {
    font-size: 40px;
    margin: 9px;
    color: white;
}

/* Cards */
/* Grids, margin between cards, images full width  */
/* 
fix footer copyright bottom margin



*/

